# qsao

./: AGENTS.md  BR Baseball Data 2021-2025.xlsb  Savant Batter 2021-2025.csv  Savant Pitcher 2021-2025.csv  analyze_baseball_data.py  baseball_model.pkl  baseball_rf_model.pkl  baseball_scaler.pkl  batters.ipynb  feature_columns.pkl  generate_kc_analysis_report.py  generate_pdf_report.py  kc_royals.csv  kc_royals_2024_analysis.csv  kc_royals_analysis.py  kc_royals_batters_analysis.csv  kc_royals_batters_analysis_2024.csv  kc_royals_combined_analysis.csv  kc_royals_combined_analysis_2024.csv  main.py  pyproject.toml  team_analysis.ipynb  visualize_analysis.py
models/: baseball_gb_model.pkl  baseball_scaler.pkl  feature_columns.pkl
reports/: kc_analysis_report_20260131_122309.json
