[project]
name = "qsao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pyxlsb>=1.0.10",
    "reportlab>=4.4.9",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
